feat: 🎸 finish eureka registry

--- a/firefly-config/src/main/resources/application.yml
+++ b/firefly-config/src/main/resources/application.yml
@@ -1,11 +1,13 @@
 spring:
+  application:
+    name: firefly-config
+  profiles:
+    active: native
   cloud:
     config:
       server:
         native:
           search-locations: classpath:/shared
-  profiles:
-    active: native
   security:
     user:
       # 默认user
